# actix_rest_api

./: Cargo.toml
actix-nodb/: Cargo.toml
actix-nodb/src/: handlers.rs  main.rs  models.rs  routes.rs  state.rs
