[package]
name = "actix-nodb"
version = "0.1.0"
authors = ["tungsten.rust"]
edition = "2021"
default-run="tutor-service"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "actix-nodb/src/bin/basic-server.rs"
name = "basic-server"

[[bin]]
path = "actix-nodb/src/bin/tutor-service.rs"
name = "tutor-service"

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
serde = { version = "1.0.136", features = ["derive"] }
chrono = {version = "0.4.19", features = ["serde"]}